<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.tasks.TaskDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:minHeight="?attr/actionBarSize"/>

        <TextView
            android:id="@+id/twTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:text="@string/task_name" />

        <EditText
            android:id="@+id/etTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="10pt"
            android:labelFor="@id/twTaskName"
            android:hint="@string/new_task_name"/>

        <TextView
            android:id="@+id/twTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:text="@string/task_description" />

        <EditText
            android:id="@+id/etTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textSize="8pt"
            android:labelFor="@id/twTaskDescription"
            android:hint="@string/new_task_description"/>

        <TextView
            android:id="@+id/twProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:text="@string/task_complete_progress" />

        <SeekBar
            android:id="@+id/seekBarProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="0"
            tools:progress="75"/>

        <TextView
            android:id="@+id/twChildrenTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:text="@string/child_tasks" />

        <TextView
            android:id="@+id/twRecyclerEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/child_tasks_none"
            android:textSize="8pt"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvChildTasks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            tools:visibility="visible"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnAddChildTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/add_child_task" />

</LinearLayout>